# Python-web-techs-lab3

./: README.md  pyproject.toml
src/: auth.py  database.py  insertdata.py  main.py  schemas.py
src/routers/: __init__.py  channels.py  common.py  programs.py  users.py
src/templates/: base.html  home.html
